Text alignment fix

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -63,7 +63,8 @@
     }
   }
 
-  .hero-text {
-    margin-left: 1.5em;
+  .hero-div {
+    margin-left: 1.5em; 
+    text-align: left;
   }
 }
